Squash a few bugs

--- a/src/frontend/pages/terra/draft/PicksView/BasicsControlPanel.scss
+++ b/src/frontend/pages/terra/draft/PicksView/BasicsControlPanel.scss
@@ -3,6 +3,7 @@
 
 .basics-control-panel {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
     .basic-control {
